date générée dynamiquement dans le footer

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             </section>
         </main>
         <footer class="ide-footer">
-            <p>&copy; 2025 Bruno Jubert - Tous droits réservés</p>
+            <p>&copy; <span id="current-year"></span> Bruno Jubert - Tous droits réservés</p>
         </footer>
     </div>
     <script src="script.js"></script>
