icone chevrons dans le footer

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,17 @@
         </main>
     </div>
     <footer class="ide-footer">
+        <div class="vs-code-icon-container">
+            <div class="vs-code-icon">
+                <i class="fas fa-chevron-right"></i>
+                <i class="fas fa-chevron-left"></i>
+            </div>
+        </div>
         <p>&copy; <span id="current-year"></span> Bruno Jubert - Tous droits réservés</p>
     </footer>
+
+
+
     <script src="script.js"></script>
 </body>
 
