--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bruno Jubert - Portfolio IDE</title>
+    <title>Bruno Jubert - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
 </head>
@@ -13,7 +13,7 @@
     <div class="ide-container">
         <nav class="ide-nav">
             <button class="explorer-menu" aria-label="Menu">
-                <i class="fas fa-chevron-right"></i> EXPLORER 
+                <i class="fas fa-chevron-right"></i> PORTFOLIO-NAV
             </button>
             <ul class="nav-menu">
                 <li><a href="#about"><i class="fas fa-user-circle"></i> about.me</a></li>
@@ -25,8 +25,13 @@
         </nav>
 
         <main class="ide-main">
-            <h1>Bienvenue sur mon Portfolio</h1>
-            <img src="" alt="">
+            <div class="header-section">
+                <h3>Bienvenue, je suis Bruno,</h3>
+                <h1>Développeur</h1>
+                <h1>Web & Web Mobile</h1>
+                <img src="../public/assets/profil.jpg" alt="Bruno Jubert" class="profile-image">
+
+            </div>
             <section id="about">
                 <h2>Bruno Jubert</h2>
                 <p>Développeur Web et Web Mobile | 41 ans</p>
@@ -34,13 +39,24 @@
             </section>
             <section id="skills">
                 <h2>Compétences</h2>
-                <ul>
-                    <li><i class="fab fa-html5"></i> HTML5</li>
-                    <li><i class="fa-brands fa-css3"></i> CSS3</li>
-                    <li><i class="fa-brands fa-sass"></i> Sass</li>
-                    <li><i class="fab fa-js"></i> JavaScript</li>
-                    <li><i class="fas fa-mobile-alt"></i> Responsive Design</li>
-                </ul>
+                <div class="hs-container">
+                    <h3>Hard-Skills</h3>
+                    <p>J'ai appris à utiliser de nombreuses technologies durant la formation chez 
+                    <a class="oclock" href="https://oclock.io/"> O'Clock <i class="fa-solid fa-arrow-pointer"></i></a>
+                    
+                    </p>
+                    <ul>
+                        <li><i class="fab fa-html5"></i> HTML5</li>
+                        <li><i class="fa-brands fa-css3"></i> CSS3</li>
+                        <li><i class="fa-brands fa-sass"></i> Sass</li>
+                        <li><i class="fab fa-js"></i> JavaScript</li>
+                        <li><i class="fa-solid fa-database"></i> PostgreSQL</li>
+                        <li><i class="fa-brands fa-angular"></i> Angular</li>
+                    </ul>
+                </div>
+                <div class="ss-container">
+                    <h3>Soft-Skills</h3>
+                </div>
             </section>
             <section id="projects">
                 <h2>Projets</h2>
