correction partie hard skills

--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,10 @@
                 <h2>Compétences</h2>
                 <div class="hs-container">
                     <h3>Hard-Skills</h3>
-                    <p>J'ai appris à utiliser de nombreuses technologies durant la formation chez 
-                    <a class="oclock" href="https://oclock.io/"> O'Clock <i class="fa-solid fa-arrow-pointer"></i></a>
-                    
-                    </p>
+                    <p>J'ai appris à utiliser de nombreuses technologies durant ma formation chez 
+                    <a target="_blank" class="oclock" href="https://oclock.io/"> O'Clock <i class="fa-solid fa-hand-pointer"></i></i></a></p>
+                    <p>que j'ai eu le plaisir de valider en décrochant le Titre Professionnel en Décembre 2024.</p>
+                    <p>Ci-dessous une liste des technologies qui font de moi  le développeur que je suis aujourd'hui.</p>
                     <ul>
                         <li><i class="fab fa-html5"></i> HTML5</li>
                         <li><i class="fa-brands fa-css3"></i> CSS3</li>
