ajustements icone/taille/couleur & responsive, remplissage section about

--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,33 @@
             </div>
             <section id="about">
                 <h2>Bruno Jubert</h2>
-                <p>Développeur Web et Web Mobile | 41 ans</p>
-                <p>Passionné de technologies et de musique</p>
+                <p>A 41 ans, j'ai eut le temps de grandir dans un monde où la technologie a évoluée à une vitesse folle.
+                </p>
+                <p>D'un ordinateur à un autre, d'une console à une autre ( et on peut continuer toute la journée ), la
+                    chance de grandir dans ce monde en constante évolution
+                    m'a permis de comprendre que je devrais vite m'adapter à la technologie car la technologie ne
+                    s'adaptera pas pour nous, à moins que nous puissions la comprendre et la maîtriser
+                    pour la rendre justement plus "adaptée" et "adaptative".
+                </p>
+                <p>
+                    L'opportunité de me former chez O'Clock m'a permis d'en apprendre plus sur le monde du
+                    développement,
+                    de comprendre que la technologie est un outil qui peut nous aider à résoudre des problèmes,
+                    à créer des solutions et à rendre le monde meilleur.
+                </p>
             </section>
             <section id="skills">
                 <h2>Compétences</h2>
                 <div class="hs-container">
                     <h3>Hard-Skills</h3>
-                    <p>J'ai appris à utiliser de nombreuses technologies durant ma formation chez 
-                    <a target="_blank" class="oclock" href="https://oclock.io/"> O'Clock <i class="fa-solid fa-hand-pointer"></i></i></a></p>
-                    <p>que j'ai eu le plaisir de valider en décrochant le Titre Professionnel en Décembre 2024.</p>
-                    <p>Ci-dessous une liste des technologies qui font de moi  le développeur que je suis aujourd'hui.</p>
+                    <p>J'ai appris à utiliser de nombreuses technologies durant ma formation chez
+                        <a target="_blank" class="oclock" href="https://oclock.io/"> O'Clock <i
+                                class="fa-solid fa-mouse-pointer"></i></i></a>
+                        que j'ai eu le plaisir de valider en décrochant le Titre Professionnel en Décembre 2024.
+                        Ci-dessous une liste des technologies qui font de moi le développeur que je suis aujourd'hui.
+                    </p>
                     <ul>
-                        <li><i class="fab fa-html5"></i> HTML5</li>
+                        <li><i class="fab fa-html5"></i>HTML5</li>
                         <li><i class="fa-brands fa-css3"></i> CSS3</li>
                         <li><i class="fa-brands fa-sass"></i> Sass</li>
                         <li><i class="fab fa-js"></i> JavaScript</li>
@@ -56,6 +70,19 @@
                 </div>
                 <div class="ss-container">
                     <h3>Soft-Skills</h3>
+                    <p>Au delà des compétences techniques, j'ai aussi développé un savoir-être qui font de moi un
+                        développeur
+                        différent des autres. La liste ci-dessous est bien entendue non-exhaustive mais
+                        elle donne une idée de ce que je peux apporter à une équipe de développement.
+                    </p>
+                    <ul>
+                        <li><i class="fa-solid fa-brain"></i> Empathique</li>
+                        <li><i class="fa-solid fa-handshake-simple"></i> Esprit d'équipe</li>
+                        <li><i class="fa-regular fa-calendar-check"></i> Organisé</li>
+                        <li><i class="fa-solid fa-cube"></i> Résoudre des probèmes</li>
+                        <li><i class="fa-solid fa-bolt-lightning"></i></i> Anticiper</li>
+                        <li><i class="fa-solid fa-brush"></i> Créatif</li>
+                    </ul>
                 </div>
             </section>
             <section id="projects">
@@ -63,27 +90,34 @@
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <p><i class="fas fa-envelope"></i> 
-                    <a href="mailto:bruno.jubert.dev@gmail.com">Ecrivez-moi : bruno.jubert.dev@gmail.com</a>
-                </p>
-                <p><i class="fab fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/bruno-j-a78b7b304/">Connectons-nous</a>
-                </p>
-                <p><i class="fab fa-github"></i> <a target="_blank" href="https://github.com/BrunoJubert">Ma page GitHub</a> </p>
+                <p>Le meilleur moyen de faire connaissance malgres la distance, 
+                    c'est d'aller fouiller ( et si c'est les poubelles de votre voisin, bin il faut pas..) <i class="fa-regular fa-face-grin-beam-sweat fa-beat"></i></p>
+                <ul>
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:bruno.jubert.dev@gmail.com">bruno.jubert.dev@gmail.com</a>
+                    </li>
+                    <li>
+                        <i class="fab fa-linkedin"></i>
+                        <a target="_blank" href="https://www.linkedin.com/in/bruno-j-a78b7b304/">Connectons-nous</a>
+                    </li>
+                    <li>
+                        <i class="fab fa-github"></i>
+                        <a target="_blank" href="https://github.com/BrunoJubert">Ma page GitHub</a>
+                    </li>
+                </ul>
             </section>
         </main>
     </div>
     <footer class="ide-footer">
         <div class="vs-code-icon-container">
-            <div class="vs-code-icon">
+            <div class="vs-code-icon" title="haha">
                 <i class="fas fa-chevron-right"></i>
                 <i class="fas fa-chevron-left"></i>
             </div>
         </div>
         <p>&copy; <span id="current-year"></span> Bruno Jubert - Tous droits réservés</p>
     </footer>
-
-
-
     <script src="script.js"></script>
 </body>
 
