ajustement icones et ajout de deux skills

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,8 @@
                         <li><i class="fab fa-js"></i> JavaScript</li>
                         <li><i class="fa-solid fa-database"></i> PostgreSQL</li>
                         <li><i class="fa-brands fa-angular"></i> Angular</li>
+                        <li><i class="fa-brands fa-node"></i>NodeJs</li>
+                        <li><i class="fa-brands fa-react"></i> React</li>
                     </ul>
                 </div>
                 <div class="ss-container">
@@ -87,11 +89,12 @@
             </section>
             <section id="projects">
                 <h2>Projets</h2>
+                
             </section>
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Le meilleur moyen de faire connaissance malgres la distance, 
-                    c'est d'aller fouiller ( et si c'est les poubelles de votre voisin, bin il faut pas..) <i class="fa-regular fa-face-grin-beam-sweat fa-beat"></i></p>
+                    c'est d'aller fouiller ( et si c'est dans les poubelles de votre voisin, bin il faut pas..) <i class="fa-regular fa-face-grin-beam-sweat fa-beat"></i></p>
                 <ul>
                     <li>
                         <i class="fas fa-envelope"></i>
@@ -111,7 +114,7 @@
     </div>
     <footer class="ide-footer">
         <div class="vs-code-icon-container">
-            <div class="vs-code-icon" title="haha">
+            <div class="vs-code-icon" title="😸Mew">
                 <i class="fas fa-chevron-right"></i>
                 <i class="fas fa-chevron-left"></i>
             </div>
