index.html déplacé à la racine pour le déploiement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bruno Jubert - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./public/styles.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
 </head>
 
@@ -40,7 +40,7 @@
                 <h3 class="animate-slide-in">Bienvenue, je suis Bruno,</h3>
                 <h1 class="animate-slide-in">Développeur</h1>
                 <h1 class="animate-slide-in">Web & Web Mobile</h1>
-                <img src="../public/assets/profil.jpg" alt="Bruno Jubert" class="profile-image animate-slide-in">
+                <img src="./public/assets/profil.jpg" alt="Bruno Jubert" class="profile-image animate-slide-in">
             </div>
 
             <section id="about">
@@ -107,11 +107,11 @@
                         apparence, mais cela m'a permis
                         d'en apprendre plus sur ce qu'on a vu en cours.
                         Vous pouvez voir le dépot en le téléchargeant
-                        <a href="../public/assets/S09-oCoffee-BrunoJubert-master.zip"
+                        <a href="./public/assets/S09-oCoffee-BrunoJubert-master.zip"
                             download="S09-oCoffee-BrunoJubert-master.zip">ici</a>
                     </p>
                     <video width="350" height="200" controls>
-                        <source src="../public/assets/ocoffee capture.mp4" type="video/mp4">
+                        <source src="./public/assets/ocoffee capture.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge les vidéos HTML5.
                     </video>
                 </div>
@@ -124,11 +124,11 @@
                         documentations, quitte à
                         réinterpréter celles qui existent pour mieux les comprendre. Celui-ci est rès utile quand on
                         débute.
-                        Téléchargez ce Read Me <a href="../public/assets/ReadmeBackend.md"
+                        Téléchargez ce Read Me <a href="./public/assets/ReadmeBackend.md"
                             download="ReadmeBackend.md">ici</a>
                     </p>
                     <video width="350" height="200" controls>
-                        <source src="../public/assets/readmeBackend.mp4" type="video/mp4">
+                        <source src="./public/assets/readmeBackend.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge les vidéos HTML5.
                     </video>
                 </div>
@@ -144,7 +144,7 @@
                         et le back <a href="https://github.com/BrunoJubert/InfosSirene-BACK">ici</a> sur mon GitHub.
                     </p>
                     <video width="350" height="200" controls>
-                        <source src="../public/assets/sirenWebSite.mp4" type="video/mp4">
+                        <source src="./public/assets/sirenWebSite.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge les vidéos HTML5.
                     </video>
                 </div>
@@ -160,9 +160,9 @@
                         ainsi que ses collaborations futures et passées. Le tout via l'accès à un tableau de bord qui
                         permet de personaliser le site à sa guise.
                         Un projet donc qui me touche tout particulièrement car je viens moi même du monde de la musique.
-                        Téléchargez le Front <a href="../public/assets/MariusBojanWebsite-Front-main.zip"
+                        Téléchargez le Front <a href="./public/assets/MariusBojanWebsite-Front-main.zip"
                             download="MariusBojanWebsite-Front-main.zip">ici</a>
-                        et le Back <a href="../public/assets/MariusBojanWebsite-Back-main.zip"
+                        et le Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
                             download="MariusBojanWebsite-Back-main.zip">ici</a>.
 
                     </p>
@@ -213,11 +213,11 @@
                 <i class="fas fa-chevron-left"></i>
             </div>
         </div>
-        <audio id="meowSound" src="../public/assets/ANMLCat_Petit miaulement d un chat (ID 0494)_LS.wav"
+        <audio id="meowSound" src="./public/assets/ANMLCat_Petit miaulement d un chat (ID 0494)_LS.wav"
             preload="auto"></audio>
         <p>&copy; <span id="current-year"></span> Bruno Jubert - Tous droits réservés</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./public/script.js"></script>
 </body>
 
 </html>
