--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                     </p>
                     <video width="350" height="400" controls>
-                        <source src="../public/assets/Démo-MBT.mp4" type="video/mp4">
+                        <source src="./public/assets/Démo-MBT.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge les vidéos HTML5.
                     </video>
                 </div>
