corrections import /3eme essai

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div id="thanks" class="thanks">
                     <h3>Remerciements</h3>
                     <p>
-                        Une vidéo de remerciements pour tous ceux qui m'ont aidé à arriver là où je suis aujourd'hui.
+                        Une vidéo de remerciement pour tous ceux qui m'ont aidé à arriver là où je suis aujourd'hui.
                     </p>
                     <iframe width="350" height="200" src="https://www.youtube.com/embed/-t2kUcHwqFA?si=LrrKfDXUfPseiR75"
                         title="YouTube video player" frameborder="0"
