--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </p>
                     <video width="350" height="200" controls>
                         <source src="./public/assets/ocoffee capture.mp4" type="video/mp4">
-                        Votre navigateur ne prend pas en charge les vidéos HTML5.
+                        Votre navigateur ne prend pas en charge les vidéos.
                     </video>
                 </div>
 
@@ -122,14 +122,14 @@
                         fait plusieurs) m'a
                         beaucoup aidé à progresser. J'ai également appris combien il est important d'écrire nos propres
                         documentations, quitte à
-                        réinterpréter celles qui existent pour mieux les comprendre. Celui-ci est rès utile quand on
+                        réinterpréter celles qui existent pour mieux les comprendre. Celle-ci est très utile quand on
                         débute.
-                        Téléchargez ce Read Me <a href="./public/assets/ReadmeBackend.md"
+                        Télécharger ce Read Me <a href="./public/assets/ReadmeBackend.md"
                             download="ReadmeBackend.md">ici</a>
                     </p>
                     <video width="350" height="200" controls>
                         <source src="./public/assets/readmeBackend.mp4" type="video/mp4">
-                        Votre navigateur ne prend pas en charge les vidéos HTML5.
+                        Votre navigateur ne prend pas en charge les vidéos.
                     </video>
                 </div>
 
@@ -145,7 +145,7 @@
                     </p>
                     <video width="350" height="200" controls>
                         <source src="./public/assets/sirenWebSite.mp4" type="video/mp4">
-                        Votre navigateur ne prend pas en charge les vidéos HTML5.
+                        Votre navigateur ne prend pas en charge les vidéos.
                     </video>
                 </div>
 
@@ -155,12 +155,12 @@
                         permet
                         à l'administrateur du site de gérer lui même les contenus du site.
                         Que ce soit des choses les plus simples comme alimenter les photos du carousel, ou des
-                        choses encore plus utiles comme gérer les dates de ses concerts lui même, ou bien encoreafficher
+                        choses encore plus utiles comme gérer les dates de ses concerts lui même, ou bien encore afficher
                         ses projets en cours
                         ainsi que ses collaborations futures et passées. Le tout via l'accès à un tableau de bord qui
                         permet de personaliser le site à sa guise.
                         Un projet donc qui me touche tout particulièrement car je viens moi même du monde de la musique.
-                        Téléchargez le Front <a href="./public/assets/MariusBojanWebsite-Front-main.zip"
+                        Télécharger le Front <a href="./public/assets/MariusBojanWebsite-Front-main.zip"
                             download="MariusBojanWebsite-Front-main.zip">ici</a>
                         et le Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
                             download="MariusBojanWebsite-Back-main.zip">ici</a>.
@@ -168,7 +168,7 @@
                     </p>
                     <video width="350" height="400" controls>
                         <source src="./public/assets/Démo-MBT.mp4" type="video/mp4">
-                        Votre navigateur ne prend pas en charge les vidéos HTML5.
+                        Votre navigateur ne prend pas en charge les vidéos.
                     </video>
                 </div>
                 <div id="thanks" class="thanks">
@@ -219,5 +219,4 @@
     </footer>
     <script src="./public/script.js"></script>
 </body>
-
 </html>
