corrections ortographe et grammaire

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <section id="about">
                 <h2>Bruno Jubert</h2>
-                <p>À 41 ans, j'ai eu le temps de grandir dans un monde où la technologie a évolué à une vitesse folle.
+                <p>À 41 ans, j'ai eu le temps de grandir dans un monde où la technologie a évoluée à une vitesse folle.
                 </p>
                 <p>D'un ordinateur à un autre, d'une console à une autre (et on pourrait continuer toute la journée), la
                     chance de
@@ -83,7 +83,7 @@
                 </div>
                 <div class="ss-container">
                     <h3>Soft-Skills</h3>
-                    <p>Au delà des compétences techniques, j'ai aussi développé un savoir-être qui font de moi un
+                    <p>Au delà des compétences techniques, j'ai aussi développé un savoir-être qui fait de moi un
                         développeur
                         différent des autres. La liste ci-dessous est bien entendue non-exhaustive mais
                         elle donne une idée de ce que je peux apporter à une équipe de développement.
@@ -108,7 +108,7 @@
                         d'en apprendre plus sur ce qu'on a vu en cours.
                         Vous pouvez voir le dépot en le téléchargeant
                         <a href="./public/assets/S09-oCoffee-BrunoJubert-master.zip"
-                            download="S09-oCoffee-BrunoJubert-master.zip">ici</a>
+                            download="S09-oCoffee-BrunoJubert-master.zip">ici</a>.
                     </p>
                     <video width="350" height="200" controls>
                         <source src="./public/assets/ocoffee capture.mp4" type="video/mp4">
@@ -125,7 +125,7 @@
                         réinterpréter celles qui existent pour mieux les comprendre. Celle-ci est très utile quand on
                         débute.
                         Télécharger ce Read Me <a href="./public/assets/ReadmeBackend.md"
-                            download="ReadmeBackend.md">ici</a>
+                            download="ReadmeBackend.md">ici</a>.
                     </p>
                     <video width="350" height="200" controls>
                         <source src="./public/assets/readmeBackend.mp4" type="video/mp4">
