ajustements variés, lazy load pour l'amélioration du temps de chargement du dom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="description"
         content="Portfolio de Bruno Jubert, développeur Web & Web Mobile spécialisé en Angular, React, Node.js et PostgreSQL. Découvrez mes projets et contactez-moi !">
     <meta name="keywords"
@@ -17,14 +16,12 @@
     <meta property="og:image" content="https://brunojubert.github.io/portfolio-ide/public/assets/profil.jpg">
     <meta property="og:url" content="https://brunojubert.github.io/portfolio-ide/">
     <meta property="og:site_name" content="Bruno Jubert - Portfolio">
-
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
-
     <title>Bruno Jubert - Portfolio</title>
     <link rel="stylesheet" href="./public/styles.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="./public/assests/favicon.png">
+    <link rel="icon" type="image/png" href="./public/assets/favicon.png">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
 </head>
 
@@ -61,12 +58,12 @@
                 <h1 class="animate-slide-in">Développeur</h1>
                 <h1 class="animate-slide-in">Web & Web Mobile</h1>
                 <img src="./public/assets/profil.jpg" alt="Bruno Jubert" class="profile-image animate-slide-in"
-                    aria-label="Image de profil de Bruno Jubert">
+                    aria-label="Image de profil de Bruno Jubert" width="100" height="100" loading="lazy">
             </div>
 
             <section id="about">
                 <h2>Bruno Jubert</h2>
-                <p>À 41 ans, j'ai eu le temps de grandir dans un monde où la technologie a évoluée à une vitesse folle.
+                <p>À 41 ans, j'ai eu le temps de grandir dans un monde où la technologie a évolué à une vitesse folle.
                 </p>
                 <p>D'un ordinateur à un autre, d'une console à une autre (et on pourrait continuer toute la journée), la
                     chance de
@@ -107,14 +104,14 @@
                     <h3>Soft-Skills</h3>
                     <p>Au delà des compétences techniques, j'ai aussi développé un savoir-être qui fait de moi un
                         développeur
-                        différent des autres. La liste ci-dessous est bien entendue non-exhaustive mais
+                        différent des autres. La liste ci-dessous est bien entendu non-exhaustive mais
                         elle donne une idée de ce que je peux apporter à une équipe de développement.
                     </p>
                     <ul>
                         <li><i class="fa-solid fa-brain" aria-hidden="true"></i> Empathique</li>
                         <li><i class="fa-solid fa-handshake-simple" aria-hidden="true"></i> Esprit d'équipe</li>
                         <li><i class="fa-regular fa-calendar-check" aria-hidden="true"></i> Organisé</li>
-                        <li><i class="fa-solid fa-cube" aria-hidden="true"></i> Résoudre des probèmes</li>
+                        <li><i class="fa-solid fa-cube" aria-hidden="true"></i> Résoudre des problèmes</li>
                         <li><i class="fa-solid fa-bolt-lightning" aria-hidden="true"></i> Anticiper</li>
                         <li><i class="fa-solid fa-brush" aria-hidden="true"></i> Créatif</li>
                     </ul>
@@ -133,22 +130,23 @@
                             aria-label="Voir le dépôt GitHub du front">ici</a>
                         et le back <a href="https://github.com/BrunoJubert/InfosSirene-BACK"
                             aria-label="Voir le dépôt GitHub du back">ici</a> sur mon GitHub.</p>
-                    <video width="350" height="200" controls>
+                    <video width="350" height="200" controls loading="lazy">
                         <source src="./public/assets/sirenWebSite.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge les vidéos.
                     </video>
+
                 </div>
 
                 <div id="mbt" class="mbt">
                     <h3>Marius Bojan Trio</h3>
                     <p>Un de mes projets les plus aboutis du moment. Ce site vitrine pour musicien est spécial, il
-                        permet à l'administrateur du site de gérer lui même les contenus du site.</p>
-                    <p>Un projet donc qui me touche tout particulièrement car je viens moi même du monde de la musique.
+                        permet à l'administrateur du site de gérer lui-même les contenus du site.</p>
+                    <p>Un projet donc qui me touche tout particulièrement car je viens moi-même du monde de la musique.
                         Télécharger le Front <a href="./public/assets/MariusBojanWebsite-Front-main.zip"
                             download="MariusBojanWebsite-Front-main.zip" aria-label="Télécharger le front">ici</a>
                         et le Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
                             download="MariusBojanWebsite-Back-main.zip" aria-label="Télécharger le back">ici</a>.</p>
-                    <video width="350" height="400" controls>
+                    <video width="350" height="400" controls loading="lazy">
                         <source src="./public/assets/Démo-MBT.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge les vidéos.
                     </video>
@@ -161,7 +159,7 @@
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
-                        aria-label="Vidéo de remerciements">
+                        aria-label="Vidéo de remerciements" loading="lazy">
                     </iframe>
                 </div>
             </section>
