--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.png">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
+    <meta name="google-site-verification" content="yPLCNrsgUWKiN7y9ZCq-I4p4bIeS5LUQCBSucZEfIFE" />
 </head>
 
 <body>
