og:image changée

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="author" content="Bruno Jubert">
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Bruno Jubert - Développeur Web & Web Mobile">
+    <meta property="og:title" content="Bruno Jubert - Développeur Web">
     <meta property="og:description" content="Découvrez mon portfolio en ligne : projets, compétences et contact.">
-    <meta property="og:image" content="https://brunojubert.github.io/portfolio-ide/public/assets/profil.jpg">
+    <meta property="og:image" content="https://brunojubert.github.io/portfolio-ide/public/assets/capture.png">
     <meta property="og:url" content="https://brunojubert.github.io/portfolio-ide/">
     <meta property="og:site_name" content="Bruno Jubert - Portfolio">
     <meta name="theme-color" content="#000000">
