images converties en webp

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bruno Jubert - Développeur Web">
     <meta property="og:description" content="Découvrez mon portfolio en ligne : projets, compétences et contact.">
-    <meta property="og:image" content="https://brunojubert.github.io/portfolio-ide/public/assets/capture.png">
+    <meta property="og:image" content="https://brunojubert.github.io/portfolio-ide/public/assets/capture.webp">
     <meta property="og:url" content="https://brunojubert.github.io/portfolio-ide/">
     <meta property="og:site_name" content="Bruno Jubert - Portfolio">
     <meta name="theme-color" content="#000000">
@@ -21,7 +21,7 @@
     <title>Bruno Jubert - Portfolio</title>
     <link rel="stylesheet" href="./public/styles.min.css">
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="./public/assets/favicon.png">
+    <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
     <meta name="google-site-verification" content="yPLCNrsgUWKiN7y9ZCq-I4p4bIeS5LUQCBSucZEfIFE" />
 </head>
@@ -58,7 +58,7 @@
                 <h3 class="animate-slide-in">Bienvenue, je suis Bruno,</h3>
                 <h1 class="animate-slide-in">Développeur</h1>
                 <h1 class="animate-slide-in">Web & Web Mobile</h1>
-                <img src="./public/assets/profil.jpg" alt="Bruno Jubert" class="profile-image animate-slide-in"
+                <img src="./public/assets/profil.webp" alt="Bruno Jubert" class="profile-image animate-slide-in"
                     aria-label="Image de profil de Bruno Jubert" width="100" height="100" loading="lazy">
             </div>
 
