import vidéo youtube

--- a/index.html
+++ b/index.html
@@ -122,6 +122,28 @@
             <section id="projects">
                 <h2 class="animate-slide-in">Projets</h2>
 
+                <div id="greenroots" class="greenroots">
+                    <h3>Green Roots</h3>
+                    <p>Ce projet a été réalisé dans le carde de l'apothéose de notre formation chez O'Clock.
+                        L'objectif était de créer un site e-commerce pour une entreprise fictive de vente de plantes en
+                        ligne pour soutenir la reforestation.
+                    </p>
+                    <p>
+                        Les principaux défis de ce projet étaient de travailler en équipe, de respecter les délais et de s'assurer que toutes 
+                        les fonctionnalités étaient bien implémentées et testées. Nous avons également dû nous adapter aux changements de dernière 
+                        minute et trouver des solutions aux problèmes techniques qui se sont présentés.
+                        Nous avons axés le site dans la même optique que l'entreprise, c'est-à-dire de manière écologique et responsable en
+                        choisissant des technologies légeres et performantes.
+                    </p>
+                    
+                    <iframe width="350" height="200" src="https://www.youtube.com/embed/eI-Mizo1VvA?si=TQkSVWFybYpVTimP"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                        aria-label="Vidéo Green Roots" loading="lazy">
+                    </iframe>
+                </div>
+
                 <div id="sirene" class="sirene">
                     <h3>Infos Sirene</h3>
                     <p>Un projet que j'ai commencé pendant mon stage de fin de formation. Plusieurs missions, entre
@@ -131,11 +153,13 @@
                             aria-label="Voir le dépôt GitHub du front">ici</a>
                         et le back <a href="https://github.com/BrunoJubert/InfosSirene-BACK"
                             aria-label="Voir le dépôt GitHub du back">ici</a> sur mon GitHub.</p>
-                    <video width="350" height="200" controls loading="lazy">
-                        <source src="./public/assets/sirenWebSite.mp4" type="video/mp4">
-                        Votre navigateur ne prend pas en charge les vidéos.
-                    </video>
-
+                    
+                    <iframe width="350" height="200" src="https://www.youtube.com/embed/OhcDuH3Hlhc?si=Y9mylF3OmwKNKLOO"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                        aria-label="Vidéo Infos Sirene" loading="lazy">
+                    </iframe>
                 </div>
 
                 <div id="mbt" class="mbt">
@@ -147,10 +171,11 @@
                             download="MariusBojanWebsite-Front-main.zip" aria-label="Télécharger le front">ici</a>
                         et le Back <a href="./public/assets/MariusBojanWebsite-Back-main.zip"
                             download="MariusBojanWebsite-Back-main.zip" aria-label="Télécharger le back">ici</a>.</p>
-                    <video width="350" height="400" controls loading="lazy">
-                        <source src="./public/assets/Démo-MBT.mp4" type="video/mp4">
-                        Votre navigateur ne prend pas en charge les vidéos.
-                    </video>
+                    <iframe width="350" height="200" src="https://www.youtube.com/embed/KJR5C5wtFtw?si=gnemHsRpltBcWWuw"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen aria-label="vidéo Marius Bojan Trio" loading="lazy">
+                    </iframe>
                 </div>
 
                 <div id="thanks" class="thanks">
