ajout green roots nav

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <i class="fa-solid fa-folder-open" aria-hidden="true"></i> projects.web
                     </button>
                     <ul class="projects-submenu">
+                        <li><a href="#greenroots" aria-label="Green Roots">Green Roots</a></li>
                         <li><a href="#sirene" aria-label="Infos Sirene">Infos Sirene</a></li>
                         <li><a href="#mbt" aria-label="Marius Bojan Trio">Marius Bojan Trio</a></li>
                         <li><a href="#thanks" aria-label="Remerciements">Remerciements</a></li>
