--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://brunojubert.github.io/portfolio-ide/">
     <title>Bruno Jubert - Portfolio</title>
-    <link rel="stylesheet" href="./public/styles.min.css">
+    <link rel="preload" href="./public/styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="./public/styles.min.css">
+    </noscript>
     <script src="https://kit.fontawesome.com/68d4cc8734.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="./public/assets/favicon.webp">
     <link rel="icon" type="image/x-icon" href="./public/assets/favicon.ico">
